# ISmyPCok

./: .gitignore  CMakeLists.txt  Old_Prompt.md  README.en.md  README.md  README.zh-CN.md
.github/workflows/: readme-modules-check.yml  release.yml
docs/: DEVELOPMENT.en.md  DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  PLUGIN_ABI.en.md  PLUGIN_ABI.md  PLUGIN_ABI.zh-CN.md
examples/python/: capi_demo.py
include/ispcok/: capi.h  plugin_api.h
samples/plugins/: bad_plugin_metric_overflow.cpp  bad_plugin_nan_score.cpp  bad_plugin_null_metrics.cpp  mock_gpu_plugin.cpp
scripts/: fetch_3rd_party.ps1  update_readme_generated.ps1  update_readme_modules.ps1  update_readme_scenarios.ps1
src/: pc_benchmark.cpp
src/capi/: ispcok_capi.cpp
src/cli/: main.cpp
src/core/: builtin_cpu_modules.cpp  builtin_memory_modules.cpp  builtin_module_factories.h  builtin_modules.cpp  builtin_modules.h  builtin_network_modules.cpp  builtin_placeholder_modules.cpp  builtin_storage_modules.cpp  builtin_system_modules.cpp  engine.cpp  engine.h  json_writer.cpp  json_writer.h  module.h  plugin_loader.cpp  plugin_loader.h  types.h
tests/: ispcok_tests.cpp
